--- a/excelmarktrade.com/excelmark_dashboard_landing/login.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/login.html
@@ -49,8 +49,8 @@
                                 <div class="live-section alert"></div>
                                 <div class="fxt-header">
                                     <div class="mb-5"> <a href="https://Excelmarktrade.com/" class="fxt-logo"
-                                            style="background: #000;"><img src="./login_files/logo.png" width="150"
-                                                alt="Logo"></a></div>
+                                            style="background: #000;"><img src="./login_files/logo.png" width="50"
+                                                alt="Logo"><span class="text-white"><b>EXCELMARK TRADE</b></span></a></div>
                                     <p>Login into your dashboard.</p>
                                 </div>
                                 <div class="fxt-form">
