makes admindashboard retain details

--- a/excelmarktrade.com/excelmark_dashboard_landing/activeusers.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/activeusers.html
@@ -9455,10 +9455,10 @@ async function fetchUser() {
       return response.data
     }
 
-    function sendUserDetail(user){
+    function sendUserDetail(userem){
       
 
-     localStorage.setItem("user",user)
+     localStorage.setItem("userem",userem)
      location.href="userinfo.html" 
 
 
