--- a/excelmarktrade.com/excelmark_dashboard_landing/userinfo.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/userinfo.html
@@ -1101,7 +1101,7 @@ var currentUser = {};
 $(document).ready(async function () {
 
   async function fetchUserInfo() {
-  var parsedData = localStorage.getItem('user')
+  var parsedData = localStorage.getItem('userem')
 
 
   const response = await $.ajax({
