--- a/excelmarktrade.com/excelmark_dashboard_landing/depositshistory.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/depositshistory.html
@@ -9521,6 +9521,8 @@ var td=$('<td>');
             var row = $('<tr>').appendTo(tbl);
         $('<td>').text(`${transac.from}`).appendTo(row);
             $('<td>').text(`$${transac.amount}`).appendTo(row);
+              $('<td><a  class="btn-primary btn-lg pl-10 w-20 mr-3 m-5" onclick="sendUserDetail(\''+user.email+'\')"  >User Info</a></td>').appendTo (row);
+                tbl.appendTo($(".table"));
               
                 tbl.appendTo($(".table"));
 
