--- a/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
@@ -9458,6 +9458,7 @@
     }
 
    async function sendUserDetail(details){
+    await details;
     console.log(details)
       let {_id}=details;
       let {transactionId}=details;
