--- a/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
@@ -9462,7 +9462,8 @@
     console.log(details)
       let {_id}=details;
       let {transactionId}=details;
-
+console.log(_id)
+console.log(transactionId)
     //  localStorage.setItem("user",transactionId)
     //  location.href="userdetails.php.html" 
     
