--- a/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
@@ -9460,8 +9460,8 @@
    async function sendUserDetail(details){
     await details;
     console.log(details)
-      let {_id}=details;
-      let {transactionId}=details;
+      let [_id,transactionId]=details;
+      
 console.log(_id)
 console.log(transactionId)
     //  localStorage.setItem("user",transactionId)
