--- a/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
@@ -9508,7 +9508,7 @@ var td=$('<td>');
         console.log(id)
         withdrawalreq.map(function(request){
           var transactId=request._id;
-          console.log(transactionId)
+          console.log(transactId)
        var details={_id:id,transactionId:transactId}
             var row = $('<tr>').appendTo(tbl);
         $('<td>').text(`${request.from}`).appendTo(row);
