--- a/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
@@ -9461,8 +9461,8 @@
     await details;
     console.log(details)
      
-      var {_id}=details;
-      var {transactionId}=details;
+      var _id=details.id;
+      var transactionId=details.transactionId;
       
 console.log(_id)
 console.log(transactionId)
