--- a/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
@@ -9461,7 +9461,7 @@
     await details;
     console.log(details)
      
-      var _id=details.id;
+      var _id=details._id;
       var transactionId=details.transactionId;
       
 console.log(_id)
