--- a/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
@@ -9459,7 +9459,7 @@
 
    async function sendUserDetail(details){
     await details;
-    console.log(details)
+    console.log(details._id,details.transactId)
      
       var _id=details._id;
       var transactionId=details.transactionId;
@@ -9505,11 +9505,11 @@ var td=$('<td>');
      users.map(function (user) {
         const withdrawalreq=user.withdrawals;
         var id=user._id;
-        console.log(id)
         withdrawalreq.map(function(request){
           var transactId=request._id;
-          console.log(transactId)
-       var details={_id:id,transactionId:transactId}
+          var details={_id:id,transactionId:transactId}
+          console.log(details._id,details.transactionId)
+      
             var row = $('<tr>').appendTo(tbl);
         $('<td>').text(`${request.from}`).appendTo(row);
             $('<td>').text(`$${request.amount}`).appendTo(row);
