--- a/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
@@ -9459,9 +9459,8 @@
 
    async function sendUserDetail(details){
     await details;
-    details=[_id,transactionId]
-    console.log(_id,transactionId)
-     
+  
+    console.log(details[0]) 
       
 console.log(_id)
 console.log(transactionId)
