--- a/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
@@ -9457,13 +9457,13 @@
       return response.data
     }
 
-   async function sendUserDetail(details){
+   async function sendUserDetail(...details){
     await details;
   
     console.log(details[0]) 
       
-console.log(_id)
-console.log(transactionId)
+// console.log(_id)
+// console.log(transactionId)
     //  localStorage.setItem("user",transactionId)
     //  location.href="userdetails.php.html" 
     
