--- a/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
@@ -9457,10 +9457,11 @@
       return response.data
     }
 
-   async function sendUserDetail(...details){
+   async function sendUserDetail(details){
     await details;
   
-    console.log(details[0]) 
+    var _id=details[0] + details[1]
+    console.log(_id)
       
 // console.log(_id)
 // console.log(transactionId)
