--- a/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
@@ -9460,8 +9460,8 @@
    async function sendUserDetail(details){
     await details;
     
-    for (let i = 0; i < 24; index++) {
-      const _id = details[index];
+    for (let i = 0; i < 24; i++) {
+      const _id = details[i];
       
     }
   
