--- a/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
@@ -9467,7 +9467,8 @@
    
     console.log(_id)
     console.log(transactionId)
-      
+      await _id;
+      await transactionId;
       
 // console.log(_id)
 // console.log(transactionId)
