--- a/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
@@ -9469,6 +9469,8 @@
     console.log(transactionId)
       await _id;
       await transactionId;
+
+      const apptransact={ _id:_id,transactionId:transactionId}
       
 // console.log(_id)
 // console.log(transactionId)
@@ -9479,7 +9481,7 @@
     type: "PUT",
     url: `https://excelmarktrade-server.onrender.com/transactions/:${_id}/withdrawals/:${transactionId}/confirm`,
     dataType: "json",
-    data: { _id,transactionId},
+    data: { apptransact},
     timeout: 30000,
     success: function () {
       $('.live-section').addClass("alert-primary").text("Profile updated successfully")
