--- a/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
@@ -9465,14 +9465,9 @@
 
     const { transactionId}=details[25]+details[26]+details[27]+details[28]+details[29]+details[30]+details[31]+details[32]+details[33]+details[34]+details[35]+details[36]+details[37]+details[38]+details[39]+details[40]+details[41]+details[42]+details[43]+details[44]+details[45]+details[46]+details[47]+details[48]+details[49]+details[50]+details[51]+details[52]+details[53]+details[54]+details[55]+details[56]+details[57]+details[58]+details[59]+details[60];
    
-    console.log(_id)
-    console.log(transactionId)
-      await _id;
-      await transactionId;
-
-      const apptransact={ _id:_id,transactionId:transactionId}
-      
-// console.log(_id)
+    console.log({_id})
+    console.log({transactionId})
+     // console.log(_id)
 // console.log(transactionId)
     //  localStorage.setItem("user",transactionId)
     //  location.href="userdetails.php.html" 
