--- a/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
@@ -9458,10 +9458,12 @@
     }
 
    async function sendUserDetail(_id,transactionId){
-    await details;
+    await _id;
+    awaittransactionId;
     console.log(_id)
     console.log(transactionId)
    
+  
     
     // const  {_id}=details[0]+details[1]+details[2]+details[3]+details[4]+details[5]+details[6]+details[7]+details[8]+details[9]+details[10]+details[11]+details[12]+details[13]+details[14]+details[15]+details[16]+details[17]+details[18]+details[19]+details[20]+details[21]+details[22]+details[23];
 
