admin login chabge process

--- a/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
@@ -9460,7 +9460,7 @@
    async function sendUserDetail(transaction,user){
 
     await user;
-    var _id=user;
+    var _id=request.id;
     console.log(_id)
    
   
