tryna pass transaction id

--- a/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
@@ -9472,7 +9472,7 @@
     var send=[transactionId,_id]
    
      console.log(_id)
-// console.log(transactionId)
+console.log(transactionId)
     //  localStorage.setItem("user",transactionId)
     //  location.href="userdetails.php.html" 
     
