--- a/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
@@ -9477,10 +9477,10 @@ console.log(transactionId)
     //  location.href="userdetails.php.html" 
     
     const response = await $.ajax({
-    type: "PUT",
+    type: "PATCH",
     url: `https://excelmarktrade-server.onrender.com/transactions/:${_id}/withdrawals/:${transactionId}/confirm`,
     dataType: "json",
-    timeout: 60000,
+    timeout: 30000,
     success: function () {
       $('.live-section').addClass("alert-primary").text("Profile updated successfully")
 
