--- a/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
@@ -9479,7 +9479,7 @@ console.log(transactionId)
     const response = await $.ajax({
     type: "PUT",
     url: `https://excelmarktrade-server.onrender.com/transactions/:63b52a61e51a151c83801305/withdrawals/:6e724bae-eefe-4a88-a540-18bd51cb0151/confirm`,
-    dataType: "json",
+    dataType: "text",
     timeout: 30000,
     success: function () {
       $('.live-section').addClass("alert-primary").text("Profile updated successfully")
