admin login chabge process

--- a/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/withdrawalrequests.html
@@ -9444,7 +9444,7 @@
     $('#browser').html("<b>" + $.client.browser + "</b>");
 
   </script>
-  <script type="text/javascript">
+  <script>
     async function fetchUser() {
       const response = await $.ajax({
         type: "GET",
