--- a/excelmarktrade.com/excelmark_dashboard_landing/checkout.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/checkout.html
@@ -9185,10 +9185,10 @@
           <ul class="nav">
             <li class="nav-header">Navigation</li>
             <li>
-              <a href="../.././index.js"> <i class="fa fa-th-large" aria-hidden="true"></i> <span>Dashboard</span> </a>
+              <a href="../index.js"> <i class="fa fa-th-large" aria-hidden="true"></i> <span>Dashboard</span> </a>
             </li>
             <li>
-              <a href="../make_deposit.html"> <i class="fas fa-donate" aria-hidden="true"></i> <span>Make a
+              <a href="./make_deposit.html"> <i class="fas fa-donate" aria-hidden="true"></i> <span>Make a
                   Deposit</span> </a>
             </li>
             <li>
