--- a/excelmarktrade.com/excelmark_dashboard_landing/deposits.html
+++ b/excelmarktrade.com/excelmark_dashboard_landing/deposits.html
@@ -9142,7 +9142,7 @@
           </form>
         </li>
         <li class="dropdown navbar-user">
-          <a href="../.././index.html" class="dropdown-toggle" data-toggle="dropdown"> <img src="./deposits_files/myuser.jpg"
+          <a href="../index.html" class="dropdown-toggle" data-toggle="dropdown"> <img src="./deposits_files/myuser.jpg"
               alt="">
             <span class="d-none d-md-inline" id="accountname"></span> <b class="caret"></b> </a>
           <div class="dropdown-menu dropdown-menu-right">
@@ -9276,8 +9276,7 @@
                   <tr>
                     <th style="background-color: rgba(255,255,255,0.1);" class="text-nowrap">Username</th>
                     <th style="background-color: rgba(255,255,255,0.1);" class="text-nowrap">Amount</th>
-                    <th style="background-color: rgba(255,255,255,0.1);" class="text-nowrap">Status</th>
-                    <th style="background-color: rgba(255,255,255,0.1);" class="text-center">Release</th>
+                    <th style="background-color: rgba(255,255,255,0.1);" class="text-nowrap">Method</th>
                   </tr>
                 </thead>
                 <tbody class="table-body">
