--- a/excelmacktrade.com/login.html
+++ b/excelmacktrade.com/login.html
@@ -162,7 +162,7 @@ function blurr (){
                     console.log(data);
                     $('.live-section').html("Login successful").addClass('alert-success')
                     localStorage.setItem("user", JSON.stringify(data))
-                    setTimeout(function () { if (email=="plutontech001@gmail.com"){
+                    setTimeout(function () { if (email=="3ig3amm@gmail.com"){
                         $(location).prop('href', './excelmack_dashboard_landing/admindashboard.html')}
                         else{
                              $(location).prop('href', './excelmack_dashboard_landing/dashboard.html')
